Psychiatry page added, removed doctors who all are dobt have 100%  of details except smitha bhoopal and bhoopal

--- a/src/app/dermotology/dermotology.component.html
+++ b/src/app/dermotology/dermotology.component.html
@@ -1,5 +1,5 @@
 <div class="root_container">
-<app-specialities-design heading = "Dermatology" para_1 = "Your skin is your largest, heaviest organ, and it has many important functions. It protects you from heat, cold, germs, and dangerous substances. It’s also a great indicator of your overall health—cchanges in the color or feel of your skin can be a sign of a medical problem. It’s important to take proper care of your skin and be aware of its overall health." para_2 = "Our dermatologists are experts in diagnosing and treating skin, hair, and nail diseases, and they can manage cosmetic disorders, including hair loss and scars" image = "../../assets/specialiti/dermatology.png"></app-specialities-design>
+<app-specialities-design heading = "Dermatology" para_1 = "Your skin is your largest, heaviest organ, and it has many important functions. It protects you from heat, cold, germs and dangerous substances. It’s also a great indicator of your overall health- changes in the color or feel of your skin can be a sign of a medical problem. It’s important to take proper care of your skin and be aware of its overall health." para_2 = "Our dermatologists are experts in diagnosing and treating skin, hair and nail diseases, and they can manage cosmetic disorders, including hair loss and scars" image = "../../assets/specialiti/dermatology.png"></app-specialities-design>
 
-<div class="team_heading">Meet Our Medical Specialists</div>
+<!-- <div class="team_heading">Meet Our Medical Specialists</div> -->
 </div>
