--- a/src/app/gastro_surgery/surgery.component.html
+++ b/src/app/gastro_surgery/surgery.component.html
@@ -55,7 +55,7 @@
         ></app-doctor-structure>
         
     </div>
-    <div class="doctor_details">
+    <!-- <div class="doctor_details">
         <app-doctor-structure *ngFor = 'let doctor of doctor_2'
         image = {{doctor.image}}
         name = "{{doctor.name}}" 
@@ -66,5 +66,5 @@
         slug="{{doctor.slug}}"
         ></app-doctor-structure>
         </div>
-    </div>
+    </div> -->
     
