--- a/src/app/oncology/oncology.component.html
+++ b/src/app/oncology/oncology.component.html
@@ -4,5 +4,5 @@ heading="Oncology and Onco Surgery"
 para_1="The Department of Oncology has eminent specialists with training from the best institutions in the country. They follow internationally accepted, protocol-based practice with quality care."
 image="../../assets/specialiti/Oncology.png"
 ></app-specialities-design>
-<div class="team_heading">Meet Our Medical Specialists</div>
+<!-- <div class="team_heading">Meet Our Medical Specialists</div> -->
 </div>
