--- a/src/app/pediatrician/pediatrician.component.html
+++ b/src/app/pediatrician/pediatrician.component.html
@@ -15,9 +15,7 @@
     <div class="container_2">
         <div class="container_2_content">
             <div class="container_2_heading">Pediatric & NICU</div>
-            <div class="container_2_para">Pediatrics is a medical discipline focused on individuals from birth to the end of adolescence. The care of pediatric patients is different from that of adults, as many drugs are processed differently in these two groups. Growth and development are also more important in pediatric patients than in adults. We boast of a vastly experienced team of pediatricians and nurses, not to mention our state-of-the-art facilities.</div>
-            <div class="container_2_para">The Department has a proven track record of successfully treating many complex cases related to pregnancy and childbirth. Sympathetic care, remarkable nursing, and commitment beyond measure are the key plus points of our competent team of obstetricians.</div>
-            <div class="container_2_para">You may rest assured that your little one is in safe hands at Aksha. Our expert team of pediatricians provides the best pediatric care in the city. Our friendly children’s specialists and special kid’s center make the pediatric hospital a kid-friendly place. The specially designed kid’s play area keeps the atmosphere happy and relaxed, which in turn facilitates the speedy recovery and healthy growth and development of kids.</div>
+            <div class="container_2_para">Pediatrics is the branch of medicine dealing with the health and medical care of infants, children, and adolescents from birth up to the age of 18. NICU refers to the Neonatal Intensive Care Unit. The birth of a baby is a wonderful and very complex process. Many physical and emotional changes occur for both mother and baby. A baby must make many physical adjustments to life outside the mother’s body. Leaving the uterus means that a baby can no longer depend on the mother’s blood supply and placenta for important body functions. We can manage preborn babies from 32 weeks.</div>
         </div>
         <div class="container_2_image">
             <img src="../../assets/specialiti/pediatric_container_2_img.png" alt="">
@@ -27,25 +25,31 @@
     <!-- container_4 -->
 
     <div class="container_4">
-        <div class="container_4_heading">Pediatric Surgery</div>
         <div class="container_4_content">
             <div class="box_1">
                 <div class="box_1_content">
-                    <div class="box_1_para">Aksha aims to provide world-class, evidence-based treatment for various orthopedic disorders and sports injuries. We combine our expertise in patient care, clinical research, and academics in order to provide the highest level of specialized services to our patients. The Department comprises a multispecialty group of surgical, research, and clinical doctors who care for thousands of people annually. Subspecialties within the department include shoulder and knee, arthroscopy and sports injuries, and adult reconstruction. </div>
-                    <div class="box_1_para box_2_para">The department of orthopaedics at Aksha Hospital deals with trauma care and various disorders of the skeletal system. It includes orthopedic surgeons performing various surgeries such as daycare surgery, trauma care, arthroscopic procedures, and joint replacement and revision joint surgery.</div>
-                    <div class="box_1_para box_2_para">We also have a team involved in rehabilitation with inpatient and outpatient physiotherapy services.</div>
+                    <div class="container_4_heading">Pediatric Surgery</div>
+                    <div class="box_1_para">Service is provided 24-hours a day and includes diagnosis, consultation, management, and follow-up care administered by a highly-experienced team of pediatric surgeons, nurses, and other specialists such as pediatric anesthesiologists.</div>
                 </div>
                 <div class="box_1_img">
                     <img src="../../assets/specialiti/pediatric_container_3_image_2.png" alt="">
                 </div>
             </div>
             <div class="box_1 box_2">
-                <div class="box_1_img">
+                <div class="box_1_img box_2_img">
                     <img src="../../assets/specialiti/pediatric_container_3_image_1.png" alt="">
                 </div>
                 <div class="box_1_content">
-                    <div class="container_4_heading">Cervical Cerclage</div>
-                    <div class="box_1_para box_2_para">During pregnancy, the cervix is supposed to remain constricted to ensure that the fetus remains inside the womb the entire gestational period. Sometimes the cervical muscles weaken, causing them to shorten or open up easily, resulting in late abortion or preterm delivery. To treat this, a cervical cerclage or cervical stitch is made, which is basically a suture tied around the cervix.</div>
+                    <div class="box_1_para">Aksha Hospital treats a variety of Paediatric conditions occurring throughout infancy and childhood. Pediatric surgery deals with surgical care for children from the day of their birth to 18 years of age. The common problems that are treated by a pediatric surgery team include : </div>
+                    <div class="box_1_para box_2_para">
+                        <ul class="box_1_list">
+                            <li class="box_1_list_item">Congenital and developmental anomalies</li>
+                            <li class="box_1_list_item">Infectious conditions</li>
+                            <li class="box_1_list_item">Trauma and injuries</li>
+                            <li class="box_1_list_item">Solid tumors</li>
+                            <li class="box_1_list_item">Cancers</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
