--- a/src/app/doctor-structure/doctor-structure.component.css
+++ b/src/app/doctor-structure/doctor-structure.component.css
@@ -210,9 +210,9 @@ text-align: center;
   }
   .desi{
     font-size: 14px;
-font-family: 'Open Sans';
-color: #000;
-text-align: left;
+    font-family: 'Open Sans';
+    color: #000;
+    text-align: center;
   }
   @media only screen and (max-width:480px){
     .close-button{
