--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -36,6 +36,7 @@
               <li (click)="goToSpecialty('ent')"(mouseenter)="onHover('ent')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">ENT</li>
               <li (click)="goToSpecialty('oncology')"(mouseenter)="onHover('oncology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Oncology and Onco Surgery</li>
               <li (click)="goToSpecialty('neurology')"(mouseenter)="onHover('neurology')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Neurology</li>
+              <li (click)="goToSpecialty('psychiatry')"(mouseenter)="onHover('physciatry')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Psychiatry</li>
             </ul>
 
             <!-- Image at the bottom of the third column -->
