--- a/src/app/family/family.component.html
+++ b/src/app/family/family.component.html
@@ -1,11 +1,12 @@
 <div class="family_photo">
     <div class="family_members" *ngFor="let member of family">
-        <a [routerLink]="['/doctor', member.slug]">
+        <!-- <a [routerLink]="['/doctor', member.slug]"> -->
             <div class="image">
                 <img [src]="member.image" alt="">
             </div>
             <div class="name">{{member.name}}</div>
+            <div class="designation">{{member.qualification}}</div>
             <div class="designation">{{member.designation}}</div>
-        </a>
+        <!-- </a> -->
     </div>
 </div>
