Mistakes said by Hr mam

--- a/src/app/doctor-details/doctor-details.component.html
+++ b/src/app/doctor-details/doctor-details.component.html
@@ -6,6 +6,7 @@
       <div class="doctor-details">
         <h1 class="doctor-name"><img class="icon"  [src]="doctor.icon">{{doctor.name}} <span>{{doctor.qualification}}</span></h1>
         <h2 class="doctor-title">{{doctor.designation}}</h2>
+        <h2 class="doctor-title">{{doctor.designation2}}</h2>
         <p class="experience">Years of Experience : <strong>{{doctor.experience}}+</strong></p>
         <div class="expertise">
           <h3><img  class="icon" src="../../assets/drug.svg">Areas Of Expertise:</h3>
