--- a/src/app/doctor-structure/doctor-structure.component.html
+++ b/src/app/doctor-structure/doctor-structure.component.html
@@ -9,6 +9,7 @@
         <div class="dr-bhoopal-ts">{{name}}</div>
         <div class="quali">{{qualification}}</div>
         <div class="desi">{{desgination}}</div>
+        <div class="desi">{{desgination2}}</div>
       </div>
     </div>
     <div class="profile-details" *ngIf="showProfileDetails">
