--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,15 +59,15 @@
 <div class="overview-container">
   <!-- Left Side - Text Content -->
   <div class="text-content">
-    <h4 class="section-title">Overview</h4>
-    <h1 class="hospital-title">Aksha Hospital Bangalore</h1>
+    <h4 class="section-title">An overview</h4>
+    <h1 class="hospital-title">Aksha Hospital Bengaluru</h1>
     <p class="description">
       Aksha Hospital is located in Jayanagar, Bengaluru. The hospital was set up with a vision of
       providing compassionate, ethical, innovative, and affordable global healthcare services. We
       hope to achieve this by making the best use of their resources and bringing about innovation
       in the field of medicine.
       <br /><br />
-      Our team wants to bring holistic, accessible, and integrated healthcare to the doorstep of
+      Our team wants to bring an holistic, accessible, and integrated healthcare to the doorstep of
       every patient and strongly believes in the idea of providing care with compassion. Every
       professional at the hospital is committed to providing world-class healthcare by encouraging
       their highly qualified professionals to deliver quality service. The hospital hopes to provide
@@ -82,7 +82,6 @@
             <li><img class="icon" src="../../assets/about-arrow.svg">Trauma Care and Obstetric Care</li>
             <li> <img class="icon" src="../../assets/about-arrow.svg"> ICU with Ventilator</li>
             <li> <img class="icon" src="../../assets/about-arrow.svg"> Dialysis</li>
-
           </ul>
         </div>
         <div class="list-2">
@@ -236,7 +235,7 @@
 
 
 <div class="why-choose-us-container">
-  <h1 class="title-1">Aksha Hospital Bangalore</h1>
+  <h1 class="title-1">Aksha Hospital Bengaluru</h1>
   <h2 class="title-1">Why Choose Us?</h2>
   <!-- Section 1 - Left Content, Right Image -->
   <div class="container">
