--- a/src/app/doctor/doctor.component.html
+++ b/src/app/doctor/doctor.component.html
@@ -2,13 +2,14 @@
         <div class="heading-1">MEET OUR EXPERIENCED TEAM</div>
         <div class="heading-2">Our Dedicated Doctors Team</div>
         <div class="heading-3">
-            We offer extensive medical procedures to outbound and inbound patients what it is and we are very proud of achievement of our staff, We are all work together to help our all patients for recovery
+            We offer extensive medical procedures to outbound and inbound patients what it is and we are very proud of achievement of our staff, We all work together to help all our patients for speedy recovery.
         </div>
     </div>
 <div class="doctors">
 <app-doctor-structure class="layout" *ngFor="let doctor of doctors"
  [name]="doctor.name"
  [desgination]="doctor.designation"
+ [desgination2]="doctor.designation2"
  [qualification]="doctor.qualification"
  [image]="doctor.image"
  [about]="doctor.about" 
