--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="footer-content">
       <div class="footer-section about">
         <img src="../../assets/aksha-logo-white.png" alt="Aksha Hospital Logo" class="footer-logo">
-        <p>Aksha Hospital is a multidisciplinary super speciality hospital with a genuine commitment to offering world-class healthcare facilities at affordable cost. Our team of highly experienced doctors ensure every patient gets the best treatment, and the best care, every time.</p>
+        <p>Aksha Hospital is a multidisciplinary super speciality hospital with a genuine commitment in offering world-class healthcare facilities at affordable cost. Our team of highly experienced medical professionals who ensure each and every patient gets the best treatment, and the best care, every time.</p>
         <!-- <div class="social-links">
             <h3 class="social">Social Media Link</h3>
           <a class="social-icon" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24"><path fill="white" d="M12 2.04c-5.5 0-10 4.49-10 10.02c0 5 3.66 9.15 8.44 9.9v-7H7.9v-2.9h2.54V9.85c0-2.51 1.49-3.89 3.78-3.89c1.09 0 2.23.19 2.23.19v2.47h-1.26c-1.24 0-1.63.77-1.63 1.56v1.88h2.78l-.45 2.9h-2.33v7a10 10 0 0 0 8.44-9.9c0-5.53-4.5-10.02-10-10.02"/></svg></a>
