--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -52,7 +52,7 @@
               </li>
 
             <li><a routerLink="/services" routerLinkActive="active-link" (click)="closeMenu()"(click)="closeDropdown()">Services</a></li>
-            <li><a routerLink="" routerLinkActive="active-link" (click)="closeMenu()" (click)="closeDropdown()">Blog</a></li>
+            <li><a routerLink="/blog" routerLinkActive="active-link" (click)="closeMenu()" (click)="closeDropdown()">Blog</a></li>
             <li><a routerLink="/gallery" routerLinkActive="active-link" (click)="closeMenu()"(click)="closeDropdown()">Gallery</a></li>
             <li><a routerLink="/contact-us" routerLinkActive="active-link" (click)="closeMenu()"(click)="closeDropdown()">Contact Us</a></li>
         </ul>
