--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,105 +1,177 @@
 <div class="root_container">
-    <!-- container 1 -->
-    <div class="container_1">
-        <!-- container 1 content -->
-        <div class="container_1_box_1">
-            <div class="container_1_content">
-                <div class="heading">ABOUT AKSHA HOSPITAL</div>
-                <div class="container_1_para">Aksha Hospital, a 50-bedded multi-specialty hospital located in Jayanagar, Bengaluru. Founded by Dr. Bhoopal with the vision of providing compassionate, ethical, and affordable healthcare services. Our hospital is dedicated in offering world-class medical care across various specialties, including gastroenterology, obstetrics, gynecology, pediatrics, orthopaedics and more. Our highly experienced team of doctors and specialists ensures that each patient receives the highest standard of care and attention.</div>
-                <div class="container_1_para"></div>
-                <div class="container_1_para"></div>
-                <div class="container_1_para">At Aksha Hospital, we are committed to delivering holistic, accessible and integrated healthcare. Our approach prioritizes the well-being of our patients by using the state-of-art facilities and cutting-edge medical technology. We strive to make global healthcare services innovative, affordable, and within reach of every patient. Our focus on compassionate care is at the heart of everything we do, ensuring that every professional at our hospital is dedicated to delivering quality service and fostering a welcoming environment for routine checkups as well as specialized treatments.</div>
-            </div>
-            <!-- container_1_image -->
-            <div class="container_1_image">
-                <img src="../../assets/about/container_1_img.png" alt="">
-            </div>
-        </div>   
-        <!-- box_2 -->
-         <div class="container_1_box_2">
-            <!-- box_2_content -->
-            <div class="container_1_content_2">
-                <div class="container_1_para_2">
-                    The hospital is commmited in providing innovative healthcare services, comprehensive and safe facilities and a responsive environment. Our core values include treating their patients with the utmost compassion, integrity, and respect while also focusing on learning and innovation. We know that our patients have a busy schedule, and we value your time. Therefore, we pledge to ensure that our patients get treated by a healthcare professional as soon as possible. We look at things as our goal, and we continuously strive to exceed them. We want to empower our patients so that they can make decisions regarding their health care. To achieve that, we make sure that we feed information to our patients with the current medical information on the diagnosis and treatment. We also encourage our patients to ask questions regarding their treatment regimen and other related doubts. Every medical professional in the hospital is dedicated to finding complete solutions to our patient’s medical condition. Rather than mitigate the symptoms, we tend to address the issue and seek solutions beyond the traditional method. The hospital also provides its patients with sophisticated medical evaluation facilities; we make use of state-of-the-art technology for performing several screening procedures at our hospital. We present these tests and procedures at the time of the patient’s appointment to avoid the need for multiple dates for the patient.
-                </div>
-            </div>
-            <div class="vision_mission">
-                <!-- vision -->
-                <div class="vision">
-                    <div class="vision_image">
-                        <div class="vision_heading">Our Vision</div>
-                        <img src="../../assets/about/container_1_heart_icon.png" alt="">
-                    </div>
-                    <div class="points">
-                        <img src="../../assets/about/vision_icon.png" alt="">
-                        <div class="points_content">Encourage research in various specialities.</div>
-                    </div>
-                    <div class="points">
-                        <img src="../../assets/about/vision_icon.png" alt="">
-                        <div class="points_content">Make better care accessible and affordable to everyone.</div>
-                    </div>
-                </div>
-                <!-- mission -->
-                 <div class="mission">
-                    <div class="mission_image">
-                        <img src="../../assets/about/container_1_heart_icon.png" alt="">
-                    </div>
-                    <div class="mission_content">
-                        <div class="vision_heading">Our Mission</div>
-                        <div class="points">
-                            <img src="../../assets/about/mision_icon.png" alt="">
-                            <div class="points_content">Encourage research in various specialities.</div>
-                        </div>
-                        <div class="points">
-                            <img src="../../assets/about/mision_icon.png" alt="">
-                            <div class="points_content">Make better care accessible and affordable to everyone.</div>
-                        </div>
-                    </div>
-                 </div>
-                 <!-- values -->
-                  <div class="values">
-                    <div class="vision_heading">Our Values</div>
-                    <div class="points">
-                        <img src="../../assets/about/value_icon.png" alt="">
-                        <div class="points_content">Work as a cohesive team of consultants, doctors, nursing and administrative staff.</div>
-                    </div>
-                    <div class="points">
-                        <img src="../../assets/about/value_icon.png" alt="">
-                        <div class="points_content">Treat those we serve and each other with kindness and dignity.</div>
-                    </div>
-                    <div class="points">
-                        <img src="../../assets/about/value_icon.png" alt="">
-                        <div class="points_content">Maintain safety standards and a clean environment that protects all.</div>
-                    </div>
-                  </div>
-
-            </div>
-         </div>
-
-    </div>
-
-    <app-family></app-family>
-
-    <!-- container 2 -->
-    <div class="container_2">
-        <div class="container_2_box_1">
-            <div class="container_2_content">
-                <div class="container_2_heading">Our Objective</div>
-                <div class="container_2_para">We continuously examine the services which we provide regularly. We also check for the improvements needed in the community. We are at constant lookup for any damages or impairments required to our health care system, repair it and move to other repairments whenever compulsory. We approach for team effort and make quality and intentional decisions to improve our services to patients and also let them feel comfortable, positive contribution. We make them experience the best possible medications and treatments that we can accomplish.</div>
-            </div>
-            <div class="container_2_image container_2_image_1">
-                <img src="../../assets/about/container_2_img_1.png" alt="">
-            </div>
+  <!-- container 1 -->
+  <div class="container_1">
+    <!-- container 1 content -->
+    <div class="container_1_box_1">
+      <div class="container_1_content">
+        <div class="heading">ABOUT AKSHA HOSPITAL</div>
+        <div class="container_1_para">
+          Aksha Hospital, a 50-bedded multi-specialty hospital located in
+          Jayanagar, Bengaluru. Founded by Dr. Bhoopal with the vision of
+          providing compassionate, ethical, and affordable healthcare services.
+          Our hospital is dedicated in offering world-class medical care across
+          various specialties, including gastroenterology, obstetrics,
+          gynecology, pediatrics, orthopaedics and more. Our highly experienced
+          team of doctors and specialists ensures that each patient receives the
+          highest standard of care and attention.
         </div>
-        <div class="container_2_box_1 container_2_box_2">
-            <div class="container_2_content">
-                <div class="container_2_heading">Oaths and Commitments</div>
-                <div class="container_2_para">We prefer giving the community with team efforts. Our <b>Teamwork</b>, <b>Timely</b> accessing, better <b>Techniques</b>, generational <b>Technology</b> and productive <b>Treatments</b> are our elements of 5Ts, which all together enables us to achieve high performance and patient contentment with assured feedback. We have the required expertise medical professionals with over a decade of experience in treating all types of neuro diseases and are reliable to deliver the best performance. Our first-class resources in the services we provide are capable of achieving the very highest standards of healthcare.</div>
-            </div>
-            <div class="container_2_image container_2_image_2">
-                <img src="../../assets/about/container_2_img_2.png" alt="">
-            </div>
+        <div class="container_1_para"></div>
+        <div class="container_1_para"></div>
+        <div class="container_1_para">
+          At Aksha Hospital, we are committed to delivering holistic, accessible
+          and integrated healthcare. Our approach prioritizes the well-being of
+          our patients by using the state-of-art facilities and cutting-edge
+          medical technology. We strive to make global healthcare services
+          innovative, affordable, and within reach of every patient. Our focus
+          on compassionate care is at the heart of everything we do, ensuring
+          that every professional at our hospital is dedicated to delivering
+          quality service and fostering a welcoming environment for routine
+          checkups as well as specialized treatments.
         </div>
+      </div>
+      <!-- container_1_image -->
+      <div class="container_1_image">
+        <img src="../../assets/about/container_1_img.png" alt="" />
+      </div>
     </div>
+    <!-- box_2 -->
+    <div class="container_1_box_2">
+      <!-- box_2_content -->
+      <div class="container_1_content_2">
+        <div class="container_1_para_2">
+          The hospital is commmited in providing innovative healthcare services,
+          comprehensive and safe facilities and a responsive environment. Our
+          core values include treating their patients with the utmost
+          compassion, integrity, and respect while also focusing on learning and
+          innovation. We know that our patients have a busy schedule, and we
+          value your time. Therefore, we pledge to ensure that our patients get
+          treated by a healthcare professional as soon as possible. We look at
+          things as our goal, and we continuously strive to exceed them. We want
+          to empower our patients so that they can make decisions regarding
+          their health care. To achieve that, we make sure that we feed
+          information to our patients with the current medical information on
+          the diagnosis and treatment. We also encourage our patients to ask
+          questions regarding their treatment regimen and other related doubts.
+          Every medical professional in the hospital is dedicated to finding
+          complete solutions to our patient’s medical condition. Rather than
+          mitigate the symptoms, we tend to address the issue and seek solutions
+          beyond the traditional method. The hospital also provides its patients
+          with sophisticated medical evaluation facilities; we make use of
+          state-of-the-art technology for performing several screening
+          procedures at our hospital. We present these tests and procedures at
+          the time of the patient’s appointment to avoid the need for multiple
+          dates for the patient.
+        </div>
+      </div>
+      <div class="vision_mission">
+        <!-- vision -->
+        <div class="vision">
+          <div class="vision_image">
+            <div class="vision_heading">Our Vision</div>
+            <img src="../../assets/about/container_1_heart_icon.png" alt="" />
+          </div>
+          <div class="points">
+            <img src="../../assets/about/vision_icon.png" alt="" />
+            <div class="points_content">
+              Encourage research in various specialities.
+            </div>
+          </div>
+          <div class="points">
+            <img src="../../assets/about/vision_icon.png" alt="" />
+            <div class="points_content">
+              Make better care accessible and affordable to everyone.
+            </div>
+          </div>
+        </div>
+        <!-- mission -->
+        <div class="mission">
+          <div class="mission_image">
+            <img src="../../assets/about/container_1_heart_icon.png" alt="" />
+          </div>
+          <div class="mission_content">
+            <div class="vision_heading">Our Mission</div>
+            <div class="points">
+              <img src="../../assets/about/mision_icon.png" alt="" />
+              <div class="points_content">
+                Encourage research in various specialities.
+              </div>
+            </div>
+            <div class="points">
+              <img src="../../assets/about/mision_icon.png" alt="" />
+              <div class="points_content">
+                Make better care accessible and affordable to everyone.
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- values -->
+        <div class="values">
+          <div class="vision_heading">Our Values</div>
+          <div class="points">
+            <img src="../../assets/about/value_icon.png" alt="" />
+            <div class="points_content">
+              Work as a cohesive team of consultants, doctors, nursing and
+              administrative staff.
+            </div>
+          </div>
+          <div class="points">
+            <img src="../../assets/about/value_icon.png" alt="" />
+            <div class="points_content">
+              Treat those we serve and each other with kindness and dignity.
+            </div>
+          </div>
+          <div class="points">
+            <img src="../../assets/about/value_icon.png" alt="" />
+            <div class="points_content">
+              Maintain safety standards and a clean environment that protects
+              all.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <app-family></app-family>
+
+  <!-- container 2 -->
+  <div class="container_2">
+    <div class="container_2_box_1">
+      <div class="container_2_content">
+        <div class="container_2_heading">Our Objective</div>
+        <div class="container_2_para">
+          We continuously examine the services that we provide regularly. We
+          check for the improvements needed in the community. We constantly look
+          up for the improvements in the health care system. We approach team
+          effort and make quality and intentional decisions to improve our
+          services to patients and also let them feel comfortable, making a
+          positive contribution. We make them experience the best possible
+          treatments that we can accomplish. 
+        </div>
+      </div>
+      <div class="container_2_image container_2_image_1">
+        <img src="../../assets/about/container_2_img_1.png" alt="" />
+      </div>
+    </div>
+    <div class="container_2_box_1 container_2_box_2">
+      <div class="container_2_content">
+        <div class="container_2_heading">Oaths and Commitments</div>
+        <div class="container_2_para">
+          We provide health facilities to the community with team efforts. Our
+          <b>Teamwork</b>, <b>Timely</b> accessing, better <b>Techniques</b>,
+          generational <b>Technology</b> and productive <b>Treatments</b> are
+          our elements of 5Ts, which all together enables us to achieve high
+          performance and patient contentment with assured feedback. We have the
+          required expertise medical professionals with over a decade of
+          experience in treating all types of Neuro disease, Oncology and
+          Gastroenterology and are reliable to deliver the best performance. Our
+          first-class resources in the services we provide are capable of
+          achieving the very highest standards of healthcare.
+        </div>
+      </div>
+      <div class="container_2_image container_2_image_2">
+        <img src="../../assets/about/container_2_img_2.png" alt="" />
+      </div>
+    </div>
+  </div>
 </div>
