--- a/src/app/family/family.component.html
+++ b/src/app/family/family.component.html
@@ -5,8 +5,8 @@
                 <img [src]="member.image" alt="">
             </div>
             <div class="name">{{member.name}}</div>
-            <div class="designation">{{member.qualification}}</div>
             <div class="designation">{{member.designation}}</div>
+            <div class="designation">{{member.designation2}}</div>
         <!-- </a> -->
     </div>
 </div>
