--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -26,7 +26,7 @@
       <div class="footer-section center-of-excellence">
         <h3 class="center">Center of Excellence</h3>
         <ul>
-          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="#">Obstetrics & Gynecologists</a></li>
+          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="#">Obstetrics & Gynaecology</a></li>
           <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="#">Surgery + Gastrosurgery</a></li>
           <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="#">General Physician</a></li>
           <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="#">Paediatric & NICU</a></li>
