--- a/src/app/gastro_surgery/surgery.component.html
+++ b/src/app/gastro_surgery/surgery.component.html
@@ -48,6 +48,7 @@
         image = {{doctor.image}}
         name = "{{doctor.name}}" 
         desgination = {{doctor.designation}}
+        desgination2 = {{doctor.designation2}}
         qualification = {{doctor.qualification}}
         about = {{doctor.about}}
         description = ""
