--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -140,6 +140,7 @@
     
           <!-- Specialization and Experience -->
           <p class="specialization">{{ doctor.designation }}</p>
+          <p class="specialization">{{ doctor.designation2 }}</p>
           <p class="experience">Years of Experience: <strong>{{ doctor.experience }}+</strong></p>
     
           <!-- Description -->
