--- a/src/app/obstetrics/obstetrics.component.html
+++ b/src/app/obstetrics/obstetrics.component.html
@@ -1,6 +1,6 @@
 <div class="root_container">
     <div class="container_1">
-        <div class="Obstetrics_heading">Obstetrics & Gynecologists</div>
+        <div class="Obstetrics_heading">Obstetrics & Gynaecology</div>
         <div class="container_1_content">
             <div class="content_1_text">
                 <div class="content_1_heading">Maternal Care / Checkup </div>
