--- a/src/app/pediatrician/pediatrician.component.html
+++ b/src/app/pediatrician/pediatrician.component.html
@@ -1,6 +1,6 @@
 <div class="root_container">
     <div class="container_1">
-        <div class="Obstetrics_heading">Pediatrician</div>
+        <div class="Obstetrics_heading">Paediatrics</div>
         <div class="container_1_content">
             <div class="content_1_text">
                 <div class="content_1_para">Pediatrics is a medical discipline focused on individuals from birth to the end of adolescence. The care of pediatric patients is different from that of adults, as many drugs are processed differently in these two groups. Growth and development are also more important in pediatric patients than in adults. We boast of a vastly experienced team of pediatricians and nurses, not to mention our state-of-the-art facilities.</div>
